# SocketTester

./: README.md
ClientTest/: CMakeLists.txt  README.md  main.cpp
ClientTest/bin.dbg/: ClientTest.ilk  config.txt  input.txt  output.txt
ClientTest/config_read/: CMakeLists.txt  config_read.cpp  config_read.hpp
ClientTest/socklib/: CMakeLists.txt  socklib.cpp  socklib.hpp
ClientTest/text_chunker/: CMakeLists.txt  text_chunker.cpp  text_chunker.hpp
ServerTest/: CMakeLists.txt  README.md  main.cpp
ServerTest/bin.dbg/: ServerTest.ilk  config.txt  output.txt
ServerTest/config_read/: config_read.cpp  config_read.hpp
ServerTest/tcp_server/: CMakeLists.txt  tcp_server.cpp  tcp_server.hpp
